修改实现方式，新增右侧展开

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.yinghuanhang.slide.SlideExpandHorizonLayout
+<com.yinghuanhang.slide.ExpandsLeftDrawerLayout
     android:id="@+id/base_slide"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_red_dark">
-</com.yinghuanhang.slide.SlideExpandHorizonLayout>
+</com.yinghuanhang.slide.ExpandsLeftDrawerLayout>
