--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.yinghuanhang.slide.ExpandsLeftDrawerLayout
-    android:id="@+id/base_slide"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_red_dark">
-</com.yinghuanhang.slide.ExpandsLeftDrawerLayout>
+<LinearLayout android:id="@+id/main_linear"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <com.huanhang.drawer.HorizonLeftDrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </com.huanhang.drawer.HorizonLeftDrawerLayout>
+
+    <com.huanhang.drawer.HorizonRightDrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </com.huanhang.drawer.HorizonRightDrawerLayout>
+
+    <com.huanhang.drawer.ExpandsLeftDrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </com.huanhang.drawer.ExpandsLeftDrawerLayout>
+
+    <com.huanhang.drawer.ExpandsRightDrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </com.huanhang.drawer.ExpandsRightDrawerLayout>
+
+</LinearLayout>
