--- a/app/src/main/res/layout/activity_main_expand.xml
+++ b/app/src/main/res/layout/activity_main_expand.xml
@@ -2,6 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@android:color/holo_orange_light"
               android:orientation="vertical">
+
+    <View
+        android:id="@+id/main_expand"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_blue_bright"/>
+
 </LinearLayout>
