--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+              android:layout_width="60dp"
               android:layout_height="match_parent"
-              android:background="@android:color/black"
-              android:orientation="horizontal">
-
-    <View
-        android:layout_width="60dp"
-        android:background="@android:color/holo_green_dark"
-        android:layout_height="match_parent"/>
-
-    <View
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"/>
-
+              android:background="@android:color/holo_green_dark"
+              android:orientation="vertical">
 </LinearLayout>
